--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,7 +17,7 @@ glide = "4.16.0"
 lifecycleRuntimeKtxVersion = "2.3.1"
 lifecycleViewmodelCompose = "2.8.0"
 loggingInterceptorVersion = "3.9.0"
-navigationCompose = "2.7.7"
+navigationCompose = "2.8.0-beta06"
 pagingCompose = "3.3.1"
 pagingRuntime = "3.1.1"
 retrofit = "2.9.0"
